tests/warnings/unused/let-clean.fil
comp Helper<'G:1>() -> (
  out: ['G, 'G+1] 32
) {}

comp main<'G:1>() -> (
  result: ['G, 'G+1] 32  
) with {
  let UNUSED_PARAM = 42;
  let USED_PARAM = 32;
} {
  helper := new Helper;
  invoke := helper<'G>();
  result = invoke.out;
}